CC-28570: Added filter by picking list UUIDs for picking list collection endpoint. (#10208)
Added filter by picking list UUIDs for picking list collection endpoint.
